--- a/scss/2-layouts/header/header.scss
+++ b/scss/2-layouts/header/header.scss
@@ -1,7 +1,7 @@
-@use "../../1-base/variables";
-@use "Header__Information";
-@use "Header__Main";
-@use "Header__Navigation.scss";
+@use '../../1-base/variables';
+@use 'Header__Information';
+@use 'Header__Main';
+@use 'Header__Navigation.scss';
 
 .Header {
   &__Information {
