--- a/scss/2-layouts/main/main.scss
+++ b/scss/2-layouts/main/main.scss
@@ -1,4 +1,4 @@
-@use "Main__BannersNew";
-@use "Main__Items";
-@use "Main__Promotion";
-@use "Main__Newsletter";
+@use 'Main__BannersNew';
+@use 'Main__Items';
+@use 'Main__Promotion';
+@use 'Main__Newsletter';
