--- a/scss/1-base/_reset.scss
+++ b/scss/1-base/_reset.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   border: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
