--- a/scss/2-layouts/footer/_Footer__CardsAndCopy.scss
+++ b/scss/2-layouts/footer/_Footer__CardsAndCopy.scss
@@ -1,5 +1,5 @@
-@use "../../1-base/variables";
-@use "../../3-modules/mixins";
+@use '../../1-base/variables';
+@use '../../3-modules/mixins';
 
 .CardsAndCopy__Container {
   @include mixins.container;
