--- a/scss/2-layouts/footer/footer.scss
+++ b/scss/2-layouts/footer/footer.scss
@@ -1,6 +1,6 @@
-@use "../../1-base/variables";
-@use "Footer__Content";
-@use "Footer__CardsAndCopy";
+@use '../../1-base/variables';
+@use 'Footer__Content';
+@use 'Footer__CardsAndCopy';
 
 .Footer {
   padding: 2rem 0;
