--- a/scss/2-layouts/main/_Main__BannersNew.scss
+++ b/scss/2-layouts/main/_Main__BannersNew.scss
@@ -1,5 +1,5 @@
-@use "../../1-base/variables";
-@use "../../3-modules/mixins";
+@use '../../1-base/variables';
+@use '../../3-modules/mixins';
 
 .BannersNew__Container {
   @include mixins.container;
@@ -11,7 +11,7 @@
   $numbers: One, Two, Three;
   @each $number in $numbers {
     #Banner#{$number} {
-      background-image: url(../../../img/banner-#{$number}.jpg);
+      background-image: url(../img/banner-#{$number}.jpg);
     }
   }
 
