--- a/scss/2-layouts/main/_Main__Promotion.scss
+++ b/scss/2-layouts/main/_Main__Promotion.scss
@@ -1,6 +1,6 @@
-@use "../../1-base/variables";
-@use "../../3-modules/mixins";
-@use "../../3-modules/plugins";
+@use '../../1-base/variables';
+@use '../../3-modules/mixins';
+@use '../../3-modules/plugins';
 
 .Main__Promotion {
   padding: 4rem 1rem;
