--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,3 @@
-@use "0-plugins/plugins";
-@use "1-base/base";
-@use "2-layouts/layouts";
+@use '0-plugins/plugins';
+@use '1-base/base';
+@use '2-layouts/layouts';
